New solution for responsiveness of modal

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="bk-modal"
                  data-modal-src="/html/modal-projects-bk.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="portfolio-item-modal-content">
+                    <div class="modal-content">
                         loading...
                     </div>
                 </div>
@@ -153,7 +153,7 @@
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="vendomo-modal"
                  data-modal-src="/html/modal-projects-vendomo.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="portfolio-item-modal-content">
+                    <div class="modal-content">
                         loading ...
                     </div>
                 </div>
@@ -206,7 +206,7 @@
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="vendomo-crm-modal"
                  data-modal-src="/html/modal-projects-vendomo-crm.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="portfolio-item-modal-content">
+                    <div class="modal-content">
                         loading ...
                     </div>
                 </div>
@@ -259,7 +259,7 @@
             <div class="portfolio-item-modal-notebook-mobile modal fade" id="foodora-modal"
                  data-modal-src="/html/modal-projects-foodora.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
-                    <div class="portfolio-item-modal-content">
+                    <div class="modal-content">
                         loading ...
                     </div>
                 </div>
@@ -296,7 +296,7 @@
                 <div class="portfolio-item-modal-tv modal fade" id="timvision-modal"
                      data-modal-src="/html/modal-projects-timvision.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="portfolio-item-modal-content">
+                        <div class="modal-content">
                             loading ...
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                 <div class="portfolio-item-modal-tv modal fade" id="cubomusica-modal"
                      data-modal-src="/html/modal-projects-cubomusica.html" tabindex="-1" role="dialog" aria-labelledby="bk-modalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="portfolio-item-modal-content">
+                        <div class="modal-content">
                             loading ...
                         </div>
                     </div>
@@ -395,7 +395,7 @@
                 <div class="portfolio-item-modal-notebook modal fade" id="unicri-modal"
                      data-modal-src="/html/modal-projects-unicri.html" tabindex="-1" role="dialog" aria-labelledby="unicri-modalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="portfolio-item-modal-content">
+                        <div class="modal-content">
                             loading ...
                         </div>
                     </div>
@@ -455,7 +455,7 @@
                 <div class="portfolio-item-modal-notebook modal fade" id="others-modal"
                      data-modal-src="/html/modal-projects-others.html" tabindex="-1" role="dialog" aria-labelledby="others-modalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
-                        <div class="portfolio-item-modal-content">
+                        <div class="modal-content">
                             loading ...
                         </div>
                     </div>
