--- a/public/html/modal-projects-bk.html
+++ b/public/html/modal-projects-bk.html
@@ -1,95 +1,96 @@
-<div class="portfolio-item-modal-wrapper">
-    <div class="portfolio-item-notebook">
-        <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-        <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-01-notebook.jpg">
-                    </div>
+<div class="portfolio-item-notebook">
+    <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+    <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="bk-main-carousel" >
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-01-notebook.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-02-notebook.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-02-notebook.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-03-notebook.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-03-notebook.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-notebook.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-notebook.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <div class="portfolio-item-modal-details-wrapper">
-                            <h3 class="portfolio-item-modal-title">Burger King</h3>
-                            <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
-                            <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
-                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
-                        </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <div class="portfolio-item-modal-details-wrapper">
+                        <h3 class="portfolio-item-modal-title">Burger King</h3>
+                        <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
+                        <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
+                        <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
                     </div>
                 </div>
             </div>
-            <ol class="carousel-indicators">
-                <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#bk-main-carousel" data-slide-to="1"></li>
-                <li data-target="#bk-main-carousel" data-slide-to="2"></li>
-                <li data-target="#bk-main-carousel" data-slide-to="3"></li>
-                <li data-target="#bk-main-carousel" data-slide-to="4"></li>
-            </ol>
         </div>
-        <ul class="carousel-labels">
-            <li class="carousel-label active">Homepage</li>
-            <li class="carousel-label">Restaurant menu</li>
-            <li class="carousel-label">Checkout</li>
-            <li class="carousel-label">Order tracking</li>
-        </ul>
-        <a class="left carousel-control" href="#bk-main-carousel" role="button" data-slide="prev">
-            <
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#bk-main-carousel" role="button" data-slide="next">
-            >
-            <span class="sr-only">Next</span>
-        </a>
+        <ol class="carousel-indicators">
+            <li data-target="#bk-main-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#bk-main-carousel" data-slide-to="1"></li>
+            <li data-target="#bk-main-carousel" data-slide-to="2"></li>
+            <li data-target="#bk-main-carousel" data-slide-to="3"></li>
+            <li data-target="#bk-main-carousel" data-slide-to="4"></li>
+        </ol>
     </div>
-    <div class="portfolio-item-mobile">
-        <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-        <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-01-mobile.jpg">
-                    </div>
+</div>
+<div class="portfolio-item-mobile">
+    <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
+    <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="bk-secondary-carousel" >
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-01-mobile.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-02-mobile.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-02-mobile.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-03-mobile.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-03-mobile.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-mobile.jpg">
-                    </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/bk-04-mobile.jpg">
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <div class="portfolio-item-modal-details-wrapper">
-                            <h3 class="portfolio-item-modal-title">Burger King</h3>
-                            <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
-                        </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <div class="portfolio-item-modal-details-wrapper">
+                        <h3 class="portfolio-item-modal-title">Burger King</h3>
+                        <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="carousel-labels">
+    <h3 class="portfolio-item-modal-title">Burger King delivery service</h3>
+    <ul class="carousel-labels-list">
+        <li class="carousel-label active">Homepage</li>
+        <li class="carousel-label">Restaurant menu</li>
+        <li class="carousel-label">Checkout</li>
+        <li class="carousel-label">Order tracking</li>
+    </ul>
+</div>
+<a class="left carousel-control" href="#bk-main-carousel" role="button" data-slide="prev">
+    <
+    <span class="sr-only">Previous</span>
+</a>
+<a class="right carousel-control" href="#bk-main-carousel" role="button" data-slide="next">
+    >
+    <span class="sr-only">Next</span>
+</a>
