Basic responsiveness for modal on SM and XS

--- a/public/html/modal-projects-bk.html
+++ b/public/html/modal-projects-bk.html
@@ -25,8 +25,7 @@
             <div class="carousel-item tse-scrollable wrapper">
                 <div class="tse-content">
                     <div class="portfolio-item-modal-details-wrapper">
-                        <h3 class="portfolio-item-modal-title">Burger King</h3>
-                        <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
+                        <h3 class="portfolio-item-modal-title">My contribution</h3>
                         <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
                         <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
                     </div>
@@ -69,11 +68,21 @@
             <div class="carousel-item tse-scrollable wrapper">
                 <div class="tse-content">
                     <div class="portfolio-item-modal-details-wrapper">
-                        <h3 class="portfolio-item-modal-title">Burger King</h3>
-                        <h4 class="portfolio-item-modal-subtitle">Delivery Service</h4>
+                        <div class="portfolio-item-modal-details-wrapper">
+                            <h3 class="portfolio-item-modal-title">My contribution</h3>
+                            <p>As Senior Front-end Developer at Rocket Internet, for the Burger King Delivery Service e-commerce, I contributed to the HTML/CSS layout (responsive with 4 breakpoints) and JavaScript features including: restaurants search, product menu, toppings selection, cart, checkout and order tracking.</p>
+                            <p>Technologies: JavaScript, jQuery, Backbone.js, Lodash, HTML5, Twig, CSS3, SASS, Bootstrap, Photoshop, Grunt, Git.</p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <ol class="carousel-indicators">
+                <li data-target="#bk-secondary-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#bk-secondary-carousel" data-slide-to="1"></li>
+                <li data-target="#bk-secondary-carousel" data-slide-to="2"></li>
+                <li data-target="#bk-secondary-carousel" data-slide-to="3"></li>
+                <li data-target="#bk-secondary-carousel" data-slide-to="4"></li>
+            </ol>
         </div>
     </div>
 </div>
@@ -84,6 +93,7 @@
         <li class="carousel-label">Restaurant menu</li>
         <li class="carousel-label">Checkout</li>
         <li class="carousel-label">Order tracking</li>
+        <li class="carousel-label"></li>
     </ul>
 </div>
 <a class="left carousel-control" href="#bk-main-carousel" role="button" data-slide="prev">
