--- a/public/html/modal-projects-vendomo.html
+++ b/public/html/modal-projects-vendomo.html
@@ -1,58 +1,76 @@
-<div class="portfolio-item-modal-wrapper">
-    <div class="portfolio-item-modal-details-wrapper">
-        <h3 class="portfolio-item-modal-title">Vendomo</h3>
-        <h4 class="portfolio-item-modal-subtitle">Real estate startup</h4>
-        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
-        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
-    </div>
-    <div class="portfolio-item-notebook">
-        <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
-        <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-main-carousel" >
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-01-notebook.jpg">
+<div class="portfolio-item-notebook">
+    <img class="portfolio-item-device-img" src="/img/portfolio/notebook.png">
+    <div class="portfolio-item-img-full-wrapper carousel main-carousel slide" id="vendomo-main-carousel" >
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-01-notebook.jpg">
+                </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-02-notebook.jpg">
+                </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <div class="portfolio-item-modal-details-wrapper">
+                        <h3 class="portfolio-item-modal-title">My Contribution</h3>
+                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
+                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
                     </div>
                 </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-02-notebook.jpg">
+            </div>
+        </div>
+        <ol class="carousel-indicators">
+            <li data-target="#vendomo-main-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#vendomo-main-carousel" data-slide-to="1"></li>
+            <li data-target="#vendomo-main-carousel" data-slide-to="3"></li>
+        </ol>
+    </div>
+</div>
+<div class="portfolio-item-mobile">
+    <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
+    <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-01-mobile.jpg">
+                </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-02-mobile.jpg">
+                </div>
+            </div>
+            <div class="carousel-item tse-scrollable wrapper">
+                <div class="tse-content">
+                    <div class="portfolio-item-modal-details-wrapper">
+                        <h3 class="portfolio-item-modal-title">My Contribution</h3>
+                        <p>As Senior Front-end Developer at Rocket Internet, for Vendomo marketing website, I created the HTML/CSS layout on all pages (responsive with 4 breakpoints) and developed all the JavaScript features: real time fees calculator, animated slides presentation and scrolling effects. </p>
+                        <p>Technologies: JavaScript, jQuery, HTML5, CSS3, LESS, Bootstrap, Photoshop, Illustrator, Gulp, Git.</p>
                     </div>
                 </div>
             </div>
             <ol class="carousel-indicators">
-                <li data-target="#vendomo-main-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#vendomo-main-carousel" data-slide-to="1"></li>
+                <li data-target="#vendomo-secondary-carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#vendomo-secondary-carousel" data-slide-to="1"></li>
+                <li data-target="#vendomo-secondary-carousel" data-slide-to="3"></li>
             </ol>
-        </div>
-        <ul class="carousel-labels">
-            <li class="carousel-label active">Homepage</li>
-            <li class="carousel-label">How it works</li>
-        </ul>
-        <a class="left carousel-control" href="#vendomo-main-carousel" role="button" data-slide="prev">
-            <
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#vendomo-main-carousel" role="button" data-slide="next">
-            >
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <div class="portfolio-item-mobile">
-        <img class="portfolio-item-device-img" src="/img/portfolio/mobile.png">
-        <div class="portfolio-item-img-full-wrapper carousel secondary-carousel slide" id="vendomo-secondary-carousel" >
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-01-mobile.jpg">
-                    </div>
-                </div>
-                <div class="carousel-item tse-scrollable wrapper">
-                    <div class="tse-content">
-                        <img class="portfolio-item-img-full" src="/img/portfolio/vendomo-02-mobile.jpg">
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </div>
+<ul class="carousel-labels">
+    <h3 class="portfolio-item-modal-title">Vendomo - real estate startup</h3>
+    <li class="carousel-label active">Homepage</li>
+    <li class="carousel-label">How it works</li>
+    <li class="carousel-label"></li>
+</ul>
+<a class="left carousel-control" href="#vendomo-main-carousel" role="button" data-slide="prev">
+    <
+    <span class="sr-only">Previous</span>
+</a>
+<a class="right carousel-control" href="#vendomo-main-carousel" role="button" data-slide="next">
+    >
+    <span class="sr-only">Next</span>
+</a>
