Enhanced responsiveness for modal on SM and XS

--- a/public/html/modal-projects-bk.html
+++ b/public/html/modal-projects-bk.html
@@ -87,7 +87,7 @@
     </div>
 </div>
 <div class="carousel-labels">
-    <h3 class="portfolio-item-modal-title">Burger King delivery service</h3>
+    <h3 class="portfolio-item-modal-title">Burger King <span class="line-breaker">delivery service</span></h3>
     <ul class="carousel-labels-list">
         <li class="carousel-label active">Homepage</li>
         <li class="carousel-label">Restaurant menu</li>
