--- a/public/html/modal-projects-foodora.html
+++ b/public/html/modal-projects-foodora.html
@@ -84,14 +84,17 @@
         </div>
     </div>
 </div>
-<ul class="carousel-labels">
-    <h3 class="portfolio-item-modal-title">Foodora - food delivery startup</h3>
-    <li class="carousel-label active">Homepage</li>
-    <li class="carousel-label">Restaurants list</li>
-    <li class="carousel-label">Restaurant menu</li>
-    <li class="carousel-label">Checkout</li>
-    <li class="carousel-label"></li>
-</ul>
+
+<div class="carousel-labels">
+    <h3 class="portfolio-item-modal-title">Foodora <span class="line-breaker">food delivery startup</span></h3>
+    <ul class="carousel-labels-list">
+        <li class="carousel-label active">Homepage</li>
+        <li class="carousel-label">Restaurants list</li>
+        <li class="carousel-label">Restaurant menu</li>
+        <li class="carousel-label">Checkout</li>
+        <li class="carousel-label"></li>
+    </ul>
+</div>
 <a class="left carousel-control" href="#foodora-main-carousel" role="button" data-slide="prev">
     <
     <span class="sr-only">Previous</span>
