--- a/public/html/modal-projects-vendomo-crm.html
+++ b/public/html/modal-projects-vendomo-crm.html
@@ -85,14 +85,16 @@
         </div>
     </div>
 </div>
-<ul class="carousel-labels">
-    <h3 class="portfolio-item-modal-title">Vendomo CRM dashboard</h3>
-    <li class="carousel-label active">Overview</li>
-    <li class="carousel-label">Appointments</li>
-    <li class="carousel-label">Candidates</li>
-    <li class="carousel-label">Candidate details</li>
-    <li class="carousel-label"></li>
-</ul>
+<div class="carousel-labels">
+    <h3 class="portfolio-item-modal-title">Vendomo <span class="line-breaker">CRM dashboard</span></h3>
+    <ul class="carousel-labels-list">
+        <li class="carousel-label active">Overview</li>
+        <li class="carousel-label">Appointments</li>
+        <li class="carousel-label">Candidates</li>
+        <li class="carousel-label">Candidate details</li>
+        <li class="carousel-label"></li>
+    </ul>
+</div>
 <div class="left carousel-control" href="#vendomo-crm-main-carousel" role="button" data-slide="prev">
     <
     <span class="sr-only">Previous</span>
