--- a/public/html/modal-projects-vendomo.html
+++ b/public/html/modal-projects-vendomo.html
@@ -60,12 +60,15 @@
         </div>
     </div>
 </div>
-<ul class="carousel-labels">
-    <h3 class="portfolio-item-modal-title">Vendomo - real estate startup</h3>
-    <li class="carousel-label active">Homepage</li>
-    <li class="carousel-label">How it works</li>
-    <li class="carousel-label"></li>
-</ul>
+<div class="carousel-labels">
+    <h3 class="portfolio-item-modal-title">Vendomo<span class="line-breaker">real estate startup</span></h3>
+    <ul class="carousel-labels-list">
+        <li class="carousel-label active">Homepage</li>
+        <li class="carousel-label">How it works</li>
+        <li class="carousel-label"></li>
+        <li class="carousel-label"></li>
+    </ul>
+</div>
 <a class="left carousel-control" href="#vendomo-main-carousel" role="button" data-slide="prev">
     <
     <span class="sr-only">Previous</span>
