New responsiveness for modal on md up sizes

--- a/public/index.html
+++ b/public/index.html
@@ -304,7 +304,7 @@
             </div>
         </article>
 
-        <article class="article-body projects-item-several js-projects-item">
+        <article class="article-body projects-item-smart-tv js-projects-item">
             <div class="projects-item-title-wrapper-horizontal">
                 <div class="projects-item-title-content">
                     <h3 class="projects-item-title">CuboMusica</h3>
